Character switching BP done

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Jose/Tester.Tester
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Jose/Tester.Tester
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Jose/SorelleGameMode.SorelleGameMode_C
 GlobalDefaultServerGameMode=None
