Small changes to update from base controller

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Jose/Tester.Tester
+EditorStartupMap=/Game/Maps/CharacterSwap.CharacterSwap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Jose/Tester.Tester
+GameDefaultMap=/Game/Maps/CharacterSwap.CharacterSwap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/SorelleGameMode.SorelleGameMode_C
 GlobalDefaultServerGameMode=None
